--- a/templates/_base.jinja.html
+++ b/templates/_base.jinja.html
@@ -5,6 +5,11 @@
     {% block meta %}
     <title>Doctor Forums</title>
     {% endblock %}
+
+    <link rel="icon"
+          type="image/png"
+          href="/static/favicon.png">
+
     <link rel="stylesheet" href="/static/vendor/uikit/css/uikit.gradient.css">
     <link rel="stylesheet" href="/static/vendor/uikit/css/components/form-password.gradient.css">
     <link rel="stylesheet" href="/static/vendor/uikit/css/components/accordion.gradient.css">
