--- a/DoctorForums/Views/Shared/_Layout.cshtml
+++ b/DoctorForums/Views/Shared/_Layout.cshtml
@@ -10,13 +10,12 @@
     {
         <title>Doctor Forums</title>
     }
-
     <link rel="icon"
           type="image/png"
-          href="/static/favicon.png">
-    <link href="~/Content/uikit.gradient.css" rel="stylesheet" />
-    <link href="~/Content/components/form-password.gradient.min.css" rel="stylesheet" />
-    <link href="~/Content/components/accordion.gradient.css" rel="stylesheet" />
+          href="/Content/favicon.png">
+    <link href="/Content/uikit.gradient.css" rel="stylesheet" />
+    <link href="/Content/components/form-password.gradient.min.css" rel="stylesheet" />
+    <link href="/Content/components/accordion.gradient.css" rel="stylesheet" />
     <link rel="stylesheet" href="/static/vendor/uikit/css/uikit.gradient.css">
     <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
@@ -106,10 +105,10 @@
         </div>
     </footer>
 
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
-    <script src="~/Scripts/uikit.js"></script>
-    <script src="~/Scripts/components/form-password.js"></script>
-    <script src="~/Scripts/components/accordion.js"></script>
+    <script src="/Scripts/jquery-1.10.2.js"></script>
+    <script src="/Scripts/uikit.js"></script>
+    <script src="/Scripts/components/form-password.js"></script>
+    <script src="/Scripts/components/accordion.js"></script>
 
     @RenderSection("scripts", required: false)
 </body>
