--- a/DoctorForums/Views/Shared/_Layout.cshtml
+++ b/DoctorForums/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@{ 
+    var _User = Session["User"] as DoctorForums.Models.User;
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -32,12 +36,12 @@
             </div>
             
             <div class="uk-navbar-content uk-navbar-flip">
-                @if (Session["User"] != null)
+                @if (_User != null)
                 {
                 <a href="{{url_for('user_profile', user_id=session.user_id)}}"
                    class="uk-margin-small-right uk-link-muted">
-                    <img src="{{g.user['avatar']}}" alt="avatar" class="uk-border-rounded" style="height: 25px;">
-                    {{g.user['display_name']}}
+                    <img src="http://2.gravatar.com/avatar/767fc9c115a1b989744c755db47feb60?s=132&d=wavatar" alt="avatar" class="uk-border-rounded" style="height: 25px;">
+                    @_User.FullName
                 </a>
 
                 <form action="@Url.Action("Logout", "User")"
