--- a/DoctorForums/Views/User/Login.cshtml
+++ b/DoctorForums/Views/User/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model DoctorForums.Models.User
+﻿@model DoctorForums.Models.LoginViewModel
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
