--- a/DoctorForums/Views/Shared/_Layout.cshtml
+++ b/DoctorForums/Views/Shared/_Layout.cshtml
@@ -1,7 +1,5 @@
 ﻿@{
-    var _user_name = System.Web.HttpContext.Current.Session["user_name"] as String;
-    var _user_full_name = System.Web.HttpContext.Current.Session["user_full_name"] as String;
-    var _token = System.Web.HttpContext.Current.Session["token"] as String;
+    var _user = Session["User"] as DoctorForums.DAO.user;
 }
 
 <!DOCTYPE html>
@@ -37,12 +35,12 @@
                 {{g.login_count}} / {{g.total_users}} doctors online
             </div>
             <div class="uk-navbar-content uk-navbar-flip">
-                @if (_user_name != null)
+                @if (_user != null)
                 {
                     <a href="{{url_for('user_profile', user_id=session.user_id)}}"
                        class="uk-margin-small-right uk-link-muted">
                         <img src="http://2.gravatar.com/avatar/767fc9c115a1b989744c755db47feb60?s=132&d=wavatar" alt="avatar" class="uk-border-rounded" style="height: 25px;">
-                        @_user_full_name
+                        @_user.full_name
                     </a>
                     <form action="@Url.Action("Logout", "User")"
                           method="POST"
