--- a/DoctorForums/Views/Rooms/Details.cshtml
+++ b/DoctorForums/Views/Rooms/Details.cshtml
@@ -15,6 +15,13 @@
 
     <p class="uk-text-muted">@Model.description</p>
 
+    <p>Moderators: 
+        @foreach(var mod in Model.moderations.Select(m => m.user))
+        {
+            <a>@mod.full_name</a>
+        }
+    </p>
+
     <button class="uk-button uk-button-primary"
         data-uk-modal="{target: '#new-topic-modal', bgclose:false}"
         @{ if (Session["User"] == null) { <text>disabled title = "Please login to create topics."</text>} }> 
