--- a/DoctorForums/Views/Shared/_Layout.cshtml
+++ b/DoctorForums/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="uk-navbar-content uk-navbar-flip">
-                        <a href="{{url_for('user_profile', user_id=session.user_id)}}"
+                        <a href="@Url.Action("Details", "User", new { id = _user.id })"
                            class="uk-margin-small-right uk-link-muted">
                             <img src="http://2.gravatar.com/avatar/767fc9c115a1b989744c755db47feb60?s=132&d=wavatar" alt="avatar" class="uk-border-rounded" style="height: 25px;">
                             @_user.full_name
@@ -102,7 +102,7 @@
                         {
                             <li class="uk-nav-divider"></li>
                             <li class="{% if g.nav.in_personal_profile %}uk-active{% endif %}">
-                                <a href="{{url_for('user_profile', user_id=session.user_id)}}">
+                                <a href="@Url.Action("Details", "User", new { id = _user.id })">
                                     <i class="uk-icon-user"></i> Personal Profile
                                 </a>
                             </li>
