--- a/DoctorForums/Views/Topic/Details.cshtml
+++ b/DoctorForums/Views/Topic/Details.cshtml
@@ -21,7 +21,7 @@
                     <header class="uk-comment-header">
                         <img class="uk-comment-avatar" src="http://2.gravatar.com/avatar/767fc9c115a1b989744c755db47feb60?s=132&d=wavatar" alt="">
                         <h4 class="uk-comment-title">
-                            <a href="{{url_for('user_profile', user_id=msg['author']['id'])}}"
+                            <a href="@Url.Action("Details", "User", new { id = message.creator_id })"
                                class="uk-link-muted">
                                 @message.user.full_name
                             </a>
