link to register_path

--- a/DoctorForums/Views/Shared/_Layout.cshtml
+++ b/DoctorForums/Views/Shared/_Layout.cshtml
@@ -77,6 +77,8 @@
                         </div>
                         <button type="submit" class="uk-button uk-button-primary">Login</button>
                     </form>
+                    Or
+                    @Html.ActionLink("Register", "Register", "User")
                 </div>
             }
 
